--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
 	
 		<header class="page-header">
-			<nav class="main-nav">
-				<div class="container">
+			<nav class="navigation">
+				<div class="navigation__container container">
 					<a href="./index.html" class="logo" lang="en"> Web<span class="accent-logo">Studio</span> </a>
 					<ul class="site-nav current">
 						<li class="item">
